--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@testing-library/react-native": "^10.1.1",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "jest": "^26.6.3",
@@ -32,17 +34,18 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-flash-message": "^0.2.1",
+    "react-native-maps": "0.29.4",
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4",
-    "expo-location": "~14.0.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "jest-mock-fetch": "^2.0.5",
     "react-test-renderer": "^17.0.1",
     "typescript": "~4.3.5"
   },
